crates/biome_cli/tests/snapshots/main_cases_editorconfig/end_of_line_parse_error.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --use-editorconfig=true
```

## `.editorconfig`

```editorconfig

[*]
end_of_line = lfcr

```

# Termination Message

```block
.editorconfig:3:15 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Invalid `end_of_line` value: `lf`, `cr`, or `crlf` is expected.
  
    2 │ [*]
  > 3 │ end_of_line = lfcr
      │               ^^^^
    4 │ 
  


```
