crates/biome_cli/tests/snapshots/main_cases_editorconfig/indent_size_parse_error.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --use-editorconfig=true
```

## `.editorconfig`

```editorconfig

  [*]
  indent_size = 1000

```

# Termination Message

```block
.editorconfig:3:17 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × number too large to fit in target type
  
    2 │   [*]
  > 3 │   indent_size = 1000
      │                 ^^^^
    4 │ 
  


```
