crates/biome_cli/tests/snapshots/main_cases_editorconfig/root_parse_error.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --use-editorconfig=true
```

## `.editorconfig`

```editorconfig

root = on

```

# Termination Message

```block
.editorconfig:2:8 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Invalid boolean value: `true` or `false` is expected.
  
  > 2 │ root = on
      │        ^^
    3 │ 
  


```
