crates/biome_cli/tests/snapshots/main_cases_editorconfig/should_apply_path_overrides.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --use-editorconfig=true tabs.js foo/spaces.js
```

## `.editorconfig`

```editorconfig

[*]
indent_style = tab

[foo/**]
indent_style = space

```

## `tabs.js`

```js

    if (foo) {
        console.log("this should be indented with spaces");
    }
    
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
tabs.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - 
    2   │ - ····if·(foo)·{
    3   │ - ········console.log("this·should·be·indented·with·spaces");
    4   │ - ····}
    5   │ - ····
      1 │ + if·(foo)·{
      2 │ + → console.log("this·should·be·indented·with·spaces");
      3 │ + }
      4 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
