crates/biome_cli/tests/snapshots/main_cases_editorconfig/should_have_biome_override_editorconfig.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write --use-editorconfig=true test.js
```

## `biome.json`

```json
{
  "formatter": {
    "lineWidth": 90
  }
}
```

## `.editorconfig`

```editorconfig

[*]
indent_style = tab

```

## `test.js`

```js
console.log(
	"really long string that should break if the line width is <=90, but not at 100",
);

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. No fixes applied.
```
