crates/biome_cli/tests/snapshots/main_cases_editorconfig/should_not_use_higher_editorconfig_when_find_biome_conf.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write --config-path=foo foo/test.js
```

## `foo/biome.json`

```json
{
  "formatter": {
    "lineWidth": 60
  }
}
```

## `.editorconfig`

```editorconfig

[*]
indent_style = space
indent_size = 2

```

## `foo/test.js`

```js
if (foo) {
	console.log("test 123");
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
