crates/biome_cli/tests/snapshots/main_cases_editorconfig/should_support_insert_final_newline.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format test.js
```

## `biome.json`

```json
{
  "formatter": {
    "useEditorconfig": true
  }
}
```

## `.editorconfig`

```editorconfig

[*]
insert_final_newline = false

```

## `test.js`

```js
function test() {
    console.log("no newline")}
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   function test() {
    2   │ - ····console.log("no·newline")}
      2 │ + → console.log("no·newline");
      3 │ + }
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
